--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
     <div class="hero">
       <header class="nav">
         <div class="nav__logo">
-          <a href="#"
-            ><img
-              src="/Starbucks/Starbucks-Landing-Page-main/images/starbucks-logo.png"
-              alt="logo"
-          /></a>
+          <a href="#"><img src="images/starbucks-logo.png" alt="logo" /></a>
         </div>
 
         <nav>
@@ -53,30 +49,18 @@
         </div>
 
         <div class="hero__image">
-          <img
-            src="/Starbucks/Starbucks-Landing-Page-main/images/frappuccino.png"
-            alt="Frappuccino"
-          />
+          <img src="images/frappuccino.png" alt="Frappuccino" />
         </div>
 
         <div class="hero__frappuccinos">
           <div class="hero__frappuccino hero__frappuccino--pink">
-            <img
-              src="/Starbucks/Starbucks-Landing-Page-main/images/frappuccino-pink.png"
-              alt="frappuccino"
-            />
+            <img src="images/frappuccino-pink.png" alt="frappuccino" />
           </div>
           <div class="hero__frappuccino hero__frappuccino--green">
-            <img
-              src="/Starbucks/Starbucks-Landing-Page-main/images/frappuccino-green.png"
-              alt="frappuccino"
-            />
+            <img src="images/frappuccino-green.png" alt="frappuccino" />
           </div>
           <div class="hero__frappuccino hero__frappuccino--red">
-            <img
-              src="/Starbucks/Starbucks-Landing-Page-main/images/frappuccino-red.png"
-              alt="frappuccino"
-            />
+            <img src="images/frappuccino-red.png" alt="frappuccino" />
           </div>
         </div>
       </div>
